conditional syntax adapted to upstream changes owing to the deprecation warning displayed

--- a/smartos-updater.yml
+++ b/smartos-updater.yml
@@ -75,5 +75,5 @@
             subject: "SmartOS update ({{ last_release }}) available"
             body: "created {{ image_dir }}/{{ last_release }} and {{ tftp_dir }}/smartos.ipxe"
 
-      when: tarball|changed
+      when: tarball is changed
 
